<resources>

    <string name="app_name">Motivation</string>

    <!-- Hello Fragment Strings -->
    <string name="here">Здесь ты научишься :</string>
    <string name="hello_self_care">Заботится о себе.</string>
    <string name="hello_self_love">Работать над собой.</string>
    <string name="hello_self_growth">Полюбишь себя.</string>

    <string name="hello_btn_get_started">Давай начинать !</string>

    <!-- You Fragment Strings -->
    <string name="you_explanation">Для начала расскажи немного о себе</string>
    
    <string name="you_name">Мое имя</string>
    <string name="you_age">Мой возраст</string>
    <string name="you_sex">Мой пол</string>
    <string name="you_name_input">Ввести имя</string>
    <string name="you_age_input">Ввести возраст</string>

    <string name="you_it_me">Это я !</string>

    <!-- Notification Settings Fragment Strings -->
    <string name="notification_explanation">Давай настроим уведомления с ежедневными Мотивациями.</string>

    <string name="notifications_how_many">Как часто</string>
    <string name="notifications_btn_plus">+</string>
    <string name="notifications_quantity_default">10X</string>
    <string name="notifications_quantity_changed">%dX</string>
    <string name="notifications_btn_minus">-</string>

    <string name="notifications_start_at">Начинать в</string>
    <string name="notifications_btn_min_time_default">09 : 00</string>

    <string name="notifications_end_at">Заканчивать в</string>
    <string name="notifications_btn_max_time_default">22 : 00</string>
    <string name="notifications_btn_changed_time">%s : %s</string>

    <string name="settings_btn_continue">Дальше !</string>

    <!-- Theme Settings Fragment Strings -->
    <string name="theme_explanation_theme">Какие области своей жизни ты хочешь улучшить / исправить?</string>

    <string name="theme_letting_go">Прощение</string>
    <string name="theme_happiness">Счастье</string>
    <string name="theme_physical_health">Физическое здоровье</string>
    <string name="theme_self_esteem">Самооценка</string>
    <string name="theme_faith_spirituality">Вера и Духовность</string>
    <string name="theme_stress_anxiety">Стресс и Волнение</string>
    <string name="theme_achieving_goals">Достижение целей</string>
    <string name="theme_relationships">Отношения</string>

    <string name="theme_next_button">Выбрать эти !</string>

    <!-- Motivation Fragment Strings -->
    <string name="motivation_quote">! Default Quote Text !</string>
    <string name="motivation_author">! Default Author Text !</string>
    <string name="motivation_btn_general">Общие</string>
    <string name="motivation_btn_favorite">Любимые</string>

    <!-- Pop-up window Strings -->
    <string name="popup_explanation">Листай, чтобы читать цитаты</string>
    <string name="popup_btn_got_it">Все понятно !</string>

    <!-- Category selection Strings -->
    <string name="categories_title">Категории</string>
    <string name="categories_general">Общие</string>
    <string name="categories_favourite">Любимые</string>

    <!-- Theme Editor Fragment Strings -->
    <string name="theme_editor_light">Light</string>
    <string name="theme_editor_dark">Dark</string>
    <string name="theme_editor_blue">Blue</string>
    <string name="theme_editor_mix">Mix</string>

    <!-- Comment Fragment Strings -->
    <string name="comments">Комментарии</string>
    <string name="comments_input">Мой комментарий</string>
    <string name="decs">Опиши свои чувства от прочитаного сдесь:</string>

    <!-- Account Fragment Strings -->
    <string name="account">Мой аккаунт</string>
    <string name="account_name">Приветствую, %s</string>
    <string name="my_info">Информация обо мне</string>
    <string name="my_likes">Любимые цитаты</string>
    <string name="my_comments">Мои комментарии</string>

    <string name="change_profile">Изменить данные</string>

    <!-- Technical Strings -->
    <string name="next">Next</string>
    <string name="TODO">Nothing here yet…</string>
    <string name="ok">OK</string>

    <!-- Widget Strings -->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>