<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_motivation"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragments.styleeditor.StyleEditorFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_alabaster"
        android:text="@string/theme_editor_light"
        android:textColor="@color/cod_gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_mineshaft"
        android:text="@string/theme_editor_dark"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_denim"
        android:text="@string/theme_editor_blue"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:text="@string/theme_editor_mix"
        android:textColor="@color/white" />

</LinearLayout>