<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HelloActivity">

        <ImageView
            android:id="@+id/imgHelloView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8.5"
            android:contentDescription="@string/next"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/photo_hello" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cynthonext"
                android:text="@string/hello_self_care"
                android:textAlignment="center"
                android:textColor="@color/mine_shaft"
                android:paddingBottom="4sp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cynthonext"
                android:text="@string/hello_self_love"
                android:textAlignment="center"
                android:textColor="@color/mine_shaft"
                android:paddingBottom="4sp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cynthonext"
                android:text="@string/hello_self_growth"
                android:textAlignment="center"
                android:textColor="@color/mine_shaft"
                android:paddingBottom="4sp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_submit"
                android:fontFamily="@font/cynthonext"
                android:text="@string/hello_btn_get_started"
                android:textAllCaps="false" />
        </LinearLayout>

</LinearLayout>