<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.HelloActivity">

    <!-- TODO соотношение елементов не в процетах (weight) по этому они съезжают при маштабировании -->
    <ImageView
        android:id="@+id/imgHelloView"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:contentDescription="@string/next"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_hello" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cynthonext"
        android:paddingBottom="4sp"
        android:text="@string/hello_self_care"
        android:textAlignment="center"
        android:textColor="@color/mine_shaft"
        android:textSize="20sp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHelloView" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cynthonext"
        android:paddingBottom="4sp"
        android:text="@string/hello_self_love"
        android:textAlignment="center"
        android:textColor="@color/mine_shaft"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cynthonext"
        android:paddingBottom="4sp"
        android:text="@string/hello_self_growth"
        android:textAlignment="center"
        android:textColor="@color/mine_shaft"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_submit"
        android:fontFamily="@font/cynthonext"
        android:text="@string/hello_btn_get_started"
        android:textAllCaps="false"
        android:layout_marginBottom="25dp"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>