<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ThemePickerFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineImageThemeBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/next"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/guidelineImageThemeBottom"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_themes" />

    <TextView
        android:id="@+id/tv_theme_explanations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/cynthonextregular"
        android:text="@string/theme_explanation_theme"
        android:textAlignment="center"
        android:textColor="@color/mine_shaft"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/categories_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header" />

    <TableLayout
        android:id="@+id/categories_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme_explanations">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_letting_go"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_letting_go"
                />

            <TextView
                android:id="@+id/tv_faith_spirituality"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_faith_spirituality"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_happiness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_happiness" />

            <TextView
                android:id="@+id/tv_stress_anxiety"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_stress_anxiety" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_physical_health"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_physical_health" />

            <TextView
                android:id="@+id/tv_achieving_goals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_achieving_goals" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_self_esteem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_self_esteem" />

            <TextView
                android:id="@+id/tv_relationships"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_theme_selector_background"
                android:textColor="@drawable/btn_theme_selector_text_color"
                android:fontFamily="@font/cynthonext"
                android:gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/theme_relationships" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_submit"
        android:fontFamily="@font/cynthonext"
        android:text="@string/settings_btn_continue"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>