<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/helloBackgroundColor"
    android:orientation="vertical"
    tools:context=".ui.fragments.hello.HelloFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_iv_header_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <ImageView
        android:id="@+id/iv_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/next"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@id/guideline_iv_header_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_hello" />

    <TextView
        android:id="@+id/tv_self_care"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cynthonext"
        android:paddingBottom="4sp"
        android:text="@string/hello_self_care"
        android:textAlignment="center"
        android:textColor="?attr/helloTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_self_love"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_self_love"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cynthonext"
        android:paddingBottom="4sp"
        android:text="@string/hello_self_love"
        android:textAlignment="center"
        android:textColor="?attr/helloTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_self_growth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_self_care" />

    <TextView
        android:id="@+id/tv_self_growth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cynthonext"
        android:paddingBottom="4sp"
        android:text="@string/hello_self_growth"
        android:textAlignment="center"
        android:textColor="?attr/helloTextColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_get_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_self_love" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_submit"
        android:fontFamily="@font/cynthonext"
        android:text="@string/hello_btn_get_started"
        android:textAllCaps="false"
        android:textColor="?attr/helloButtonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>